[package]
name = "oxideterm-gpui-markdown"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
gpui.workspace = true
oxideterm-theme = { path = "../oxideterm-theme" }
pulldown-cmark = "0.12"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }

[dev-dependencies]
