[package]
name = "oxideterm-gpui-markdown"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
gpui.workspace = true
oxideterm-theme = { path = "../oxideterm-theme" }
pulldown-cmark = "0.12"
ratex-layout = "0.1.4"
ratex-parser = "0.1.4"
ratex-svg = { version = "0.1.4", features = ["embed-fonts"] }
ratex-types = "0.1.4"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }

[dev-dependencies]
