[package]
name = "oxideterm-gpui-settings-view"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
gpui.workspace = true
oxideterm-ai = { path = "../oxideterm-ai" }
oxideterm-gpui-platform = { path = "../oxideterm-gpui-platform" }
oxideterm-gpui-ui = { path = "../oxideterm-gpui-ui" }
oxideterm-i18n = { path = "../oxideterm-i18n" }
oxideterm-render-policy = { path = "../oxideterm-render-policy" }
oxideterm-settings = { path = "../oxideterm-settings" }
oxideterm-settings-model = { path = "../oxideterm-settings-model" }
oxideterm-theme = { path = "../oxideterm-theme" }
regex.workspace = true
