[package]
name = "oxideterm-gpui-terminal"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
gpui.workspace = true
image.workspace = true
oxideterm-render-policy = { path = "../oxideterm-render-policy" }
oxideterm-terminal = { path = "../oxideterm-terminal" }
oxideterm-terminal-unicode = { path = "../oxideterm-terminal-unicode" }
parking_lot.workspace = true
regex.workspace = true
