[package]
name = "oxideterm-gpui-terminal"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
gpui.workspace = true
image.workspace = true
oxideterm-render-policy = { path = "../oxideterm-render-policy" }
oxideterm-settings = { path = "../oxideterm-settings" }
oxideterm-ssh = { path = "../oxideterm-ssh" }
oxideterm-terminal = { path = "../oxideterm-terminal" }
oxideterm-terminal-recording = { path = "../oxideterm-terminal-recording" }
oxideterm-terminal-unicode = { path = "../oxideterm-terminal-unicode" }
oxideterm-trzsz = { path = "../oxideterm-trzsz" }
parking_lot.workspace = true
regex.workspace = true
serde_json.workspace = true
