[package]
name = "oxideterm-ide-fs"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
oxideterm-backend-classification = { path = "../oxideterm-backend-classification" }
oxideterm-ide-core = { path = "../oxideterm-ide-core" }
oxideterm-sftp = { path = "../oxideterm-sftp" }
oxideterm-ssh = { path = "../oxideterm-ssh" }
base64.workspace = true
dashmap.workspace = true
futures-util.workspace = true
russh = { path = "../russh" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
zstd = "0.13"
