[package]
name = "oxideterm-local-files"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
chrono.workspace = true
md5 = "0.7"
serde.workspace = true
sha2.workspace = true
sysinfo.workspace = true
walkdir = "2"
zip = { version = "2.0", default-features = false, features = ["deflate", "time"] }
