[package]
name = "oxideterm-plugin-host-api"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = []
wasm-runtime = ["dep:oxideterm-plugin-wasm-runtime"]

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
oxideterm-ai = { path = "../oxideterm-ai" }
oxideterm-connection-monitor = { path = "../oxideterm-connection-monitor" }
oxideterm-connections = { path = "../oxideterm-connections" }
oxideterm-ide-core = { path = "../oxideterm-ide-core" }
oxideterm-i18n = { path = "../oxideterm-i18n" }
oxideterm-forwarding = { path = "../oxideterm-forwarding" }
oxideterm-plugin-manifest = { path = "../oxideterm-plugin-manifest" }
oxideterm-plugin-protocol = { path = "../oxideterm-plugin-protocol" }
oxideterm-plugin-registry = { path = "../oxideterm-plugin-registry" }
oxideterm-plugin-wasm-runtime = { path = "../oxideterm-plugin-wasm-runtime", optional = true }
oxideterm-settings = { path = "../oxideterm-settings" }
oxideterm-sftp = { path = "../oxideterm-sftp" }
oxideterm-ssh = { path = "../oxideterm-ssh" }
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
zeroize.workspace = true

[dev-dependencies]
wat = "1.250.0"
