[package]
name = "oxideterm-plugin-runtime-install"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
flate2 = "1.1.9"
futures-util.workspace = true
oxideterm-plugin-protocol = { path = "../oxideterm-plugin-protocol" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar = "0.4"
zip.workspace = true
