[package]
name = "oxideterm-preview"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = []

[dependencies]
chardetng = "0.1"
encoding_rs.workspace = true
gpui.workspace = true
image.workspace = true
memmap2.workspace = true
mime_guess = "2"
rodio = { version = "0.21.1", default-features = true }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
ttf-parser = "0.25"

[dev-dependencies]
serde_json.workspace = true
tempfile = "3.23"
