[package]
name = "oxideterm-session-adapter"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
oxideterm-connections = { path = "../oxideterm-connections" }
oxideterm-settings = { path = "../oxideterm-settings" }
oxideterm-sftp = { path = "../oxideterm-sftp" }
oxideterm-ssh = { path = "../oxideterm-ssh" }
oxideterm-terminal = { path = "../oxideterm-terminal" }

[dev-dependencies]
chrono.workspace = true
